canvi template per fer servir la funció

--- a/templates/redhat/interface.erb
+++ b/templates/redhat/interface.erb
@@ -1,5 +1,5 @@
 DEVICE="<%= @dev %>"
-ONBOOT="<% if @onboot %>yes<% else %>no<% end %>"
+ONBOOT="<%= scope.function_bool2httpd([@onboot]) %>"
 <% if @dhcp -%>
 BOOTPROTO=dhcp
 <% else -%>
